--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/077-diagonalization.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/077-diagonalization.ipynb
@@ -89,7 +89,7 @@
     "\n",
     "However, we also saw [an example](#eigen-ex3) where a $3\\times 3$ matrix only had two distinct eigenvalues, but still had three linearly independent eigenvectors:\n",
     "\n",
-    ":::{prf:example} The eigenbasis from a $3\\times 3$ matrix with distinct eigenvalues\n",
+    ":::{prf:example} The eigenbasis from a $3\\times 3$ matrix a repeated eigenvalue\n",
     ":label: eigen-ex7\n",
     "\n",
     "Recall the $3\\times 3$ matrix $A = \\bm 2&-1&-1\\\\0&3&1\\\\0&1&3 \\em$. We showed it had the following eigenvalue/vector pairs:\n",
@@ -301,7 +301,68 @@
     "\n",
     "As we see, there is no direct connection between invertibility and diagonalizaibility, in the sense that one does not imply the other. You can have invertible matrices which are not diagonalizable (like $B$) and diagonalizable matrices which are not invertible (like $C$).\n",
     "```\n",
-    ":::"
+    ":::\n",
+    "\n",
+    "#### Python Break!\n",
+    "\n",
+    "Here, we'll show how to use `numpy.linalg` (or `scipy.linalg`) to diagonalize a matrix. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P:\n",
+      "[[ 1.         -0.57735027  0.        ]\n",
+      " [ 0.          0.57735027 -0.70710678]\n",
+      " [ 0.          0.57735027  0.70710678]] \n",
+      "\n",
+      "D:\n",
+      "[[2. 0. 0.]\n",
+      " [0. 4. 0.]\n",
+      " [0. 0. 2.]] \n",
+      "\n",
+      "PDP^{-1}:\n",
+      "[[ 2. -1. -1.]\n",
+      " [ 0.  3.  1.]\n",
+      " [ 0.  1.  3.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# given a square matrix A, returns a tuple of matrices (P, D) such that A = PDP^{-1}\n",
+    "def diagonalize(A):\n",
+    "    evals, evecs = np.linalg.eig(A)\n",
+    "    return evecs, np.diag(evals)\n",
+    "\n",
+    "A = np.array([\n",
+    "    [2, -1, -1],\n",
+    "    [0, 3, 1],\n",
+    "    [0, 1, 3]\n",
+    "])\n",
+    "\n",
+    "P, D = diagonalize(A)\n",
+    "\n",
+    "print('P:')\n",
+    "print(P, '\\n')\n",
+    "print('D:')\n",
+    "print(D, '\\n')\n",
+    "print('PDP^{-1}:')\n",
+    "print(P @ D @ np.linalg.inv(P))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see, finding a diagonalization in Python is really easy! The `numpy.linalg.eig` function returns the eigenvectors in a matrix and the eigenvalues (conveniently, it has the eigenvalues in the same order as the corresponding eigenvectors)."
    ]
   }
  ],
@@ -321,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
