typo: replaced "eigen value" with "eigenvalue  for consistency

--- a/06_Ch_7_Dynamics/081-complex_eig_LDS.ipynb
+++ b/06_Ch_7_Dynamics/081-complex_eig_LDS.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: 7.1 Complex Eigen Values and Linear Dynamical Systems\n",
+    "title: 7.1 Complex Eigenvalues and Linear Dynamical Systems\n",
     "subject: Dynamics\n",
     "subtitle: Euler breaks down complex exponentials\n",
-    "short_title: 7.1 Complex Eigen Values and Linear Dynamical Systems\n",
+    "short_title: 7.1 Complex Eigenvalues and Linear Dynamical Systems\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -16,7 +16,7 @@
     "      - University of Pennsylvania\n",
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: complex eigen values, complex conjugates, euler's formula, real eigensolutions\n",
+    "keywords: complex eigenvalues, complex conjugates, euler's formula, real eigensolutions\n",
     "math:\n",
     "  '\\vv': '\\mathbf{#1}'\n",
     "  '\\bm': '\\begin{bmatrix}'\n",
@@ -46,7 +46,7 @@
     "\n",
     "By the end of this page, you should know:\n",
     "- the Euler's formula \n",
-    "- how to write real solutions to linear dynamical systems that have complex eigen values"
+    "- how to write real solutions to linear dynamical systems that have complex Eigenvalues"
    ]
   },
   {
