--- a/06_Ch_7_Dynamics/082-rep_eig_jord_LDS.ipynb
+++ b/06_Ch_7_Dynamics/082-rep_eig_jord_LDS.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: 7.2 Repeated Eigen Values, Jordan Forms, and Linear Dynamical Systems\n",
+    "title: 7.2 Repeated Eigenvalues, Jordan Forms, and Linear Dynamical Systems\n",
     "subject: Dynamics\n",
-    "subtitle: multiplicity of eigen values\n",
-    "short_title: 7.2 Repeated Eigen Values, Jordan Forms, and Linear Dynamical Systems\n",
+    "subtitle: multiplicity of Eigenvalues\n",
+    "short_title: 7.2 Repeated Eigenvalues, Jordan Forms, and Linear Dynamical Systems\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -45,10 +45,10 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- examples of matrices with repeated eigen values\n",
+    "- examples of matrices with repeated Eigenvalues\n",
     "- what are Jordan Forms\n",
-    "- algebraic and geometric multiplicity of eigen values\n",
-    "- how to solve linear dynamical systems with repeated eigen values"
+    "- algebraic and geometric multiplicity of Eigenvalues\n",
+    "- how to solve linear dynamical systems with repeated Eigenvalues"
    ]
   },
   {
