--- a/06_Ch_7_Dynamics/086-App_Mech_Sys.ipynb
+++ b/06_Ch_7_Dynamics/086-App_Mech_Sys.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: 7.6 Appplication: Mechanical System\n",
+    "title: 7.6 Appplication - Mechanical System\n",
     "subject: Dynamics\n",
     "subtitle: \n",
-    "short_title: 7.6 Appplication: Mechanical System\n",
+    "short_title: 7.6 Appplication - Mechanical System\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
