meta data chapter 7

--- a/06_Ch_7_Dynamics/085-Inhomog_sys.ipynb
+++ b/06_Ch_7_Dynamics/085-Inhomog_sys.ipynb
@@ -7,7 +7,7 @@
     "---\n",
     "title: 7.5 Inhomogeneous Systems\n",
     "subject: Dynamics\n",
-    "subtitle: \n",
+    "subtitle: Matrix exponential solves the initial value problem\n",
     "short_title: 7.5 Inhomogeneous Systems\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
@@ -45,7 +45,9 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- "
+    "- the equation of an inhomogeneous system\n",
+    "- the solution of a scalar inhomogeneous system\n",
+    "- the solution of a vector inhomogeneous system"
    ]
   },
   {
@@ -118,7 +120,7 @@
    "source": [
     "\n",
     "\n",
-    "**TO DO** Please transcribe Example 10.3b, but replace u with x for notation, and compute $e^{At}$ via diagonalization. Make sure to highlight $f(t) = \\begin{bmatrix} 0 \\\\ e^t \\end{bmatrix}$\n"
+    "**TO DO** Please transcribe Example 10.36, but replace u with x for notation, and compute $e^{At}$ via diagonalization. Make sure to highlight $f(t) = \\begin{bmatrix} 0 \\\\ e^t \\end{bmatrix}$\n"
    ]
   },
   {
