--- a/06_Ch_7_Dynamics/086-App_Mech_Sys.ipynb
+++ b/06_Ch_7_Dynamics/086-App_Mech_Sys.ipynb
@@ -7,7 +7,7 @@
     "---\n",
     "title: 7.6 Appplication - Mechanical System\n",
     "subject: Dynamics\n",
-    "subtitle: \n",
+    "subtitle: beahvior of a mass-spring system\n",
     "short_title: 7.6 Appplication - Mechanical System\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
@@ -45,7 +45,10 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- "
+    "- how to formulate a first-order system from Newton's law\n",
+    "- the physical parameters from the equation of the system\n",
+    "- how to interpret the system behavior from its solution\n",
+    "- the different types of system behavior based on the eigen values and how it relates to the physical parameters "
    ]
   },
   {
@@ -81,7 +84,8 @@
     "Therefore, solutions are weighted sums of\n",
     "\n",
     "\\begin{align*}\n",
-    "\\vv x_{\\pm}(t) &= e^{ i\\sqrt{\\frac{k}{m}}t} \\left(\\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix} \\pm i \\begin{bmatrix} 0 \\\\ \\sqrt{\\frac{k}{m}} \\end{bmatrix}\\right) =  \\left(\\cos\\left(\\sqrt{\\frac{k}{m}}t\\right) + i \\sin\\left(\\sqrt{\\frac{k}{m}}t\\right)\\right) \\left(\\bm 1 \\\\ 0 \\em \\pm i \\bm 0 \\\\ \\sqrt{\\frac{k}{m}}\\em\\right) \\\\\n",
+    "\\vv x_{\\pm}(t) &= e^{ i\\sqrt{\\frac{k}{m}}t} \\left(\\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix} \\pm i \\begin{bmatrix} 0 \\\\ \\sqrt{\\frac{k}{m}} \\end{bmatrix}\\right) \\\\\n",
+    "&=  \\left(\\cos\\left(\\sqrt{\\frac{k}{m}}t\\right) + i \\sin\\left(\\sqrt{\\frac{k}{m}}t\\right)\\right) \\left(\\bm 1 \\\\ 0 \\em \\pm i \\bm 0 \\\\ \\sqrt{\\frac{k}{m}}\\em\\right) \\\\\n",
     "&= \\begin{bmatrix} \\cos\\left(\\sqrt{\\frac{k}{m}}t\\right) \\\\ \\mp \\sin\\left(\\sqrt{\\frac{k}{m}}t\\right) \\end{bmatrix}\n",
     " \\pm i\\begin{bmatrix} \\sin\\left(\\sqrt{\\frac{k}{m}}t\\right) \\\\ \\cos\\left(\\sqrt{\\frac{k}{m}}t\\right) \\end{bmatrix},\n",
     "\\end{align*}\n",
