improved formatting of linear ODEs page

--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/078-linear_odes.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/078-linear_odes.ipynb
@@ -133,7 +133,12 @@
     "\n",
     "## First Order Dynamical Systems\n",
     "\n",
-    "We will concerntrate most of our attention on *homogenous linear time-invariant first order dynamical systems*. In this case, we have a vector valued solution\n",
+    "We will concerntrate most of our attention on *homogenous linear time-invariant first order dynamical systems*. \n",
+    "\n",
+    ":::{prf:definition} Homogeneous linear time-invariant first order dynamical system\n",
+    ":label: homogeneous-linear-ode-defn\n",
+    "\n",
+    "For *homogeneous linear time-invariant first order dynamical systems*, we have a vector-valued solution\n",
     "\n",
     "\\begin{align*}\n",
     "    \\vv{u}(t) = \\bm u_1(t)\\\\u_2(t) \\\\ \\vdots \\\\ u_n(t) \\em \n",
@@ -155,6 +160,7 @@
     "\\end{align*}\n",
     "\n",
     "for $A\\in \\mathbb{R}^{n\\times n}$ a known constant matrix. \n",
+    ":::\n",
     "\n",
     "The question now becomes: what are the solutions to [(LTI)](expr:LTI)? Well, let's take inspiration from the scalar solution [(SOL)](expr:ODEsoln) and investigate if and when\n",
     "\n",
@@ -164,15 +170,18 @@
     "\n",
     "is a solution to [(LTI)](expr:LTI). Here, $\\lambda \\in \\mathbb R$ is a constant, as is $\\vv v\\in \\mathbb{R}^n$. In other words, the components $u_i(t) = e^{\\lambda t} v_i$ of [(GUESS)](expr:GUESS) are constant multiples of the *same* exponential function.\n",
     "\n",
-    "First, we compute the time derivative of [(GUESS)](expr:GUESS):\n",
+    "Let's start by computing the time derivatives of both sides of [(GUESS)](expr:GUESS):\n",
     "\n",
     "\\begin{align*}\n",
-    "A\\vv u = A(e^{\\lambda t}\\vv v) = e^{\\lambda t} (A \\vv v)\\tag{$e^{\\lambda t}$ is a scalar}\n",
+    "\\vv u(t) = e^{\\lambda t} \\vv v \\quad\\text{for all $t$} &\\iff \\frac{d}{dt} \\vv u(t) = \\frac{d}{dt} e^{\\lambda t} \\vv v \\quad\\text{for all $t$} \\\\\n",
+    "&\\iff A\\vv u = \\lambda e^{\\lambda t} \\vv v \\quad\\text{for all $t$} \\qquad\\text{(by (LTI))}\\\\\n",
+    "&\\iff Ae^{\\lambda t} \\vv v = \\lambda e^{\\lambda t} \\vv v \\quad\\text{for all $t$} \\qquad\\text{(by (GUESS))}\\\\\n",
+    "&\\iff A \\vv v = \\lambda  \\vv v \\quad\\text{for all $t$} \\qquad\\text{(since $e^{\\lambda t}$ is a positive scalar)}\n",
     "\\end{align*}\n",
     "\n",
-    "Therefore [(GUESS)](expr:GUESS) solves [(LTI)](expr:LTI) if and only if $\\lambda e^{\\lambda t} \\vv v = e^{\\lambda t} A \\vv v \\iff \\lambda \\vv v = A \\vv v$. Note that this is precisely the definition of an [eigenvalue/eigenvector](#eigen-defn) pair, which we've studied extensively in the previous few pages! For the rest of this page, we'll look at how the facts we've learend about eigenvalues and eigenvectors play a role in the solution to linear ODEs.\n",
+    "Therefore [(GUESS)](expr:GUESS) solves [(LTI)](expr:LTI) if and only if $\\lambda \\vv v = A \\vv v$. Note that this is precisely the definition of an [eigenvalue/eigenvector](#eigen-defn) pair, which we've studied extensively in the previous few pages! For the rest of this page, we'll look at how the facts we've learend about eigenvalues and eigenvectors play a role in the solution to linear ODEs.\n",
     "\n",
-    "## Eigenvalues and Eigenvectors in Linear ODEs\n",
+    "# Eigenvalues and Eigenvectors in Linear ODEs\n",
     "\n",
     "A key obesrvation is that we can reduce solving [(LTI)](#expr:LTI) to solving $n$ independent scalar ODEs when the matrix $A$ is [diagonalizable](#diagonalizable-defn). Let $V = \\bm \\vv{v_1} & \\vv{v_2} & \\dots & \\vv{v_n}\\em$ be the $n\\times n$ matrix of the eigenvectors of $A$, and $D = \\text{diag}(\\lambda_1, \\dots, \\lambda_n)$, the diagonal matrix of corresponding eigenvalues. Then $A = VDV^{-1}$ so that \n",
     "\n",
@@ -209,15 +218,23 @@
     "\n",
     "where we remember that $\\vv c = V^{-1} u(t_0)$. \n",
     "\n",
-    "We just showed something incredibly powerful: any solution to [(LTI)](expr:LTI) is a linear combination of the functions\n",
+    "## Solving Linear ODEs when $A$ is Diagonalizable\n",
+    "\n",
+    "In the previous section, we just showed something incredibly powerful, which we summarize in the following theorem.\n",
+    "\n",
+    ":::{prf:theorem} The solution to a homogeneous linear time-invariant first order dynamical system with diagonalizable $A$\n",
+    ":label: homogeneous-linear-ode-thm\n",
+    "\n",
+    "Let $\\frac{d}{dt}\\vv u = A\\vv u$ define a linear ODE such that the coefficient matrix $A$ is diagonalizable. Let $\\lambda_1, \\lambda_2, \\dots, \\lambda_n$ be the eigenvalues of $A$ (counting multiplicities), and let $\\vv{v_1}, \\vv{v_2}, \\dots, \\vv{v_n}$ be the corresponding eigenvectors.\n",
+    "\n",
+    "Then, any solution to this linear ODE is a linear combination of the functions\n",
     "\n",
     "\\begin{align*}\\label{expr:star}\n",
-    "\\{ e^{\\lambda_1 (t - t_0)}\\vv{v_1}, e^{\\lambda_2 (t - t_0)}\\vv{v_2}, \\dots , e^{\\lambda_n(t - t_0)}\\vv{v_n} \\}\\tag{$*$}\n",
+    "\\{ e^{\\lambda_1 (t - t_0)}\\vv{v_1}, e^{\\lambda_2 (t - t_0)}\\vv{v_2}, \\dots , e^{\\lambda_n(t - t_0)}\\vv{v_n} \\}\n",
     "\\end{align*}\\\n",
     "\n",
     "i.e., these form a [basis](#basis_defn) for the solutions of [(LTI)](#expr:LTI); which particular solution we select is specified by the initial conditions via $\\vv{c} = V^{-1}u(t_0)$.\n",
-    "\n",
-    "\n",
+    ":::\n",
     "\n",
     ":::{prf:example} Solving a linear ODE with $2\\times 2$ coefficient matrix\n",
     ":label: odes-ex2\n",
