--- a/06_Ch_7_Dynamics/081-complex_eig_LDS.ipynb
+++ b/06_Ch_7_Dynamics/081-complex_eig_LDS.ipynb
@@ -45,15 +45,15 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- the Euler's formula \n",
-    "- how to write real solutions to linear dynamical systems that have complex Eigenvalues"
+    "- how to use Euler's formula,\n",
+    "- how to write real solutions to linear dynamical systems that have complex eigenvalues."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Solution to Linear Dynamical Systems\n",
+    "# Linear Dynamical Systems with Complex Eigenvalues\n",
     "\n",
     "Let's apply our solution method for linear dynamical systems to $\\dot{\\vv x} = A \\vv x$ with\n",
     "$A = \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix}$ that we saw in the previous lecture. Recall that $A$ has eigenvalue/eigenvector pairs:\n",
