--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/078-linear_odes.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/078-linear_odes.ipynb
@@ -223,7 +223,7 @@
     "In the previous section, we just showed something incredibly powerful, which we summarize in the following theorem.\n",
     "\n",
     ":::{prf:theorem} The solution to a homogeneous linear time-invariant first order dynamical system with diagonalizable $A$\n",
-    ":label: homogeneous-linear-ode-thm\n",
+    ":label: odes-thm1\n",
     "\n",
     "Let $\\frac{d}{dt}\\vv u = A\\vv u$ define a linear ODE such that the coefficient matrix $A$ is diagonalizable. Let $\\lambda_1, \\lambda_2, \\dots, \\lambda_n$ be the eigenvalues of $A$ (counting multiplicities), and let $\\vv{v_1}, \\vv{v_2}, \\dots, \\vv{v_n}$ be the corresponding eigenvectors.\n",
     "\n",
