--- a/06_Ch_7_Dynamics/081-complex_eig_LDS.ipynb
+++ b/06_Ch_7_Dynamics/081-complex_eig_LDS.ipynb
@@ -53,17 +53,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear Dynamical Systems with Complex Eigenvalues\n",
+    "# Solving Linear ODEs with Complex Eigenvalues\n",
     "\n",
-    "Let's apply our solution method for linear dynamical systems to $\\dot{\\vv x} = A \\vv x$ with\n",
-    "$A = \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix}$ that we saw in the previous lecture. Recall that $A$ has eigenvalue/eigenvector pairs:\n",
+    "In the previous section on linear ODEs, we learned how to find the solutions when the coefficient matrix $A$ was diagonalizable. We also saw some examples when $A$ was diagonalizable and had all real eigenvalues. It turns out that the same procedure generalizes when $A$ is diagonalizable, but has complex eigenvalues. On this page, we'll see how this can be done. \n",
+    "\n",
+    "Let's apply our [solution method for diagonalizable $A$](#odes-thm1) to $\\dot{\\vv x} = A \\vv x$ with $A = \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix}$. We are given that $A$ has eigenvalue/eigenvector pairs:\n",
     "\n",
     "\\begin{equation}\n",
     "\\label{eig_vals}\n",
     "\\lambda_1 = i, \\ \\vv v_1 = \\begin{bmatrix} 1 \\\\ -i \\end{bmatrix} \\quad \\text{and} \\quad \\lambda_2 = -i, \\vv v_2 = \\begin{bmatrix} 1 \\\\ i \\end{bmatrix}.\n",
     "\\end{equation}\n",
     "\n",
-    "Even though [these](#eig_vals) have complex entries, we can still use the approach from last class. We write the solution to $\\dot{\\vv x} = A\\vv x$ as\n",
+    "Even though these eigenvalues/vectors have complex entries, we can still use our solution method for diagonalizable $A$! We write the solution to $\\dot{\\vv x} = A\\vv x$ as\n",
     "\n",
     "\\begin{equation}\n",
     "\\label{sol}\n",
@@ -77,40 +78,40 @@
     "\\vv x_1(t) = c_1e^{it}\\begin{bmatrix} 1 \\\\ -i \\end{bmatrix} \\quad \\text{and} \\quad \\vv x_2(t) = c_2e^{-it}\\begin{bmatrix} 1 \\\\ i \\end{bmatrix}. \\quad (\\text{BASE})\n",
     "\\end{equation}\n",
     "\n",
-    "and then solve for $c_1$ and $c_2$ to ensure compatibility with the initial condition $\\vv x(0)$. In general $c_1$ and $c_2$ will also be complex numbers, and $\\vv x(t)$ will take complex values. This is mathematically correct, and indeed one can study dynamical systems evolving over complex numbers.\n",
+    "and then solve for $c_1$ and $c_2$ to ensure compatibility with the initial condition $\\vv x(0)$. In general $c_1$ and $c_2$ will also be complex numbers, and $\\vv x(t)$ will take complex values. This is mathematically correct, and indeed one can study dynamical systems evolving over complex numbers. However, we will see that with a little massaging, we can rewrite this solution in a more useful form!\n",
     "\n",
-    "However, in this class, and in most engineering applications, we are interested in _real solutions to $\\dot{\\vv x} = A\\vv x$_. If we know want real solutions, it might make sense to try to find different \"base\" solutions than $\\vv x_1(t)$ and $\\vv x_2(t)$ that still span all possible solutions to $\\dot{\\vv x} = A\\vv x$. Our key tool for accomplishing this is [Euler's formula](https://en.wikipedia.org/wiki/Euler%27s_formula), which states that for any $t \\in \\mathbb{R}$,\n",
+    "## Rewriting the Solution to a Linear ODE\n",
     "\n",
-    "\\begin{equation}\n",
-    "\\label{eul}\n",
-    "e^{it} = \\cos t + i \\sin t \\quad (\\text{EUL}).\n",
-    "\\end{equation}\n",
+    "In this class, and in most engineering applications, we are interested in _real solutions to $\\dot{\\vv x} = A\\vv x$_. If we know want real solutions, it might make sense to try to find different \"base\" solutions than $\\vv x_1(t)$ and $\\vv x_2(t)$ that still span all possible solutions to $\\dot{\\vv x} = A\\vv x$. Our key tool for accomplishing this is [Euler's formula](https://en.wikipedia.org/wiki/Euler%27s_formula):\n",
     "\n",
-    "We apply ([EUL](#eul)) to ([BASE](#base)), and obtain (after simplifying):\n",
+    ":::{prf:theorem} Euler's Formula \n",
+    ":label: euler-formula-thm\n",
     "\n",
-    "$$\n",
-    "\\vv x_1(t) = e^{it}\\begin{bmatrix} 1 \\\\ -i \\end{bmatrix} = \\begin{bmatrix} \\cos t \\\\ \\sin t \\end{bmatrix} + i\\begin{bmatrix} \\sin t \\\\ -\\cos t \\end{bmatrix}\n",
-    "$$\n",
+    "For any $t \\in \\mathbb{R}$, $e^{it} = \\cos t + i \\sin t$.\n",
+    ":::\n",
     "\n",
-    "and\n",
+    "We apply Euler's formula to ([BASE](#base)), and obtain (after simplifying):\n",
     "\n",
-    "$$ \n",
+    "\\begin{align*}\n",
+    "\\vv x_1(t) = e^{it}\\begin{bmatrix} 1 \\\\ -i \\end{bmatrix} = \\begin{bmatrix} \\cos t \\\\ \\sin t \\end{bmatrix} + i\\begin{bmatrix} \\sin t \\\\ -\\cos t \\end{bmatrix},\n",
     "\\vv x_2(t) = e^{-it}\\begin{bmatrix} 1 \\\\ i \\end{bmatrix} = \\begin{bmatrix} \\cos t \\\\ \\sin t \\end{bmatrix} - i\\begin{bmatrix} \\sin t \\\\ -\\cos t \\end{bmatrix}.\n",
-    "$$\n",
+    "\\end{align*}\n",
     "\n",
-    "We've made some progress, in that $\\vv x_1(t)$ and $\\vv x_2(t)$ are now in the \"standard\" complex number form $a+ib$, and that $\\vv x_1(t) = \\overline{\\vv x_2}(t)$, i.e. they are clearly complex conjugates of each other. We use this observation strategically to define two new \"base\" solutions:\n",
+    "We've made some progress, in that $\\vv x_1(t)$ and $\\vv x_2(t)$ are now in the \"standard\" complex number form $a+ib$, and that $\\vv x_1(t) = \\overline{\\vv x_2}(t)$, i.e., $\\vv{x_1}(t)$ and $\\vv{x_2}(t)$ are complex conjugates. We use this observation strategically to define two new \"base\" solutions:\n",
     "\n",
     "\\begin{equation}\n",
     "\\label{real_eqn}\n",
-    "\\hat{\\vv x}_1(t) = \\frac{1}{2}(\\vv x_1(t) + \\vv x_2(t)) = \\frac{1}{2}(\\vv x_1(t) + \\overline{\\vv x_1}(t)) = \\begin{bmatrix} \\cos t \\\\ \\sin t \\end{bmatrix} (= \\text{Re}\\{\\vv x_1(t)\\})\n",
+    "\\hat{\\vv x}_1(t) &= \\frac{1}{2}(\\vv x_1(t) + \\vv x_2(t)) = \\frac{1}{2}(\\vv x_1(t) + \\overline{\\vv x_1}(t)) \\\\\n",
+    "&= \\begin{bmatrix} \\cos t \\\\ \\sin t \\end{bmatrix} (= \\text{Re}\\{\\vv x_1(t)\\})\n",
     "\\end{equation}\n",
     "\n",
     "\\begin{equation}\n",
     "\\label{im_eqn}\n",
-    "\\hat{\\vv x}_2(t) = \\frac{1}{2i}(\\vv x_1(t) - \\vv x_2(t)) = \\frac{1}{2i}(\\vv x_1(t) - \\overline{\\vv x_1}(t)) = \\begin{bmatrix} \\sin t \\\\ -\\cos t \\end{bmatrix} (= \\text{Im}\\{\\vv x_1(t)\\})\n",
+    "\\hat{\\vv x}_2(t) &= \\frac{1}{2i}(\\vv x_1(t) - \\vv x_2(t)) = \\frac{1}{2i}(\\vv x_1(t) - \\overline{\\vv x_1}(t)) \\\\\n",
+    "&= \\begin{bmatrix} \\sin t \\\\ -\\cos t \\end{bmatrix} (= \\text{Im}\\{\\vv x_1(t)\\})\n",
     "\\end{equation}\n",
     "\n",
-    "We note that since $\\hat{\\vv x}_1(t)$ and $\\hat{\\vv x}_2(t)$ are linear combinations of $\\vv x_1(t)$ and $\\vv x_2(t)$, they are valid solutions to $\\dot{\\vv x} = A\\vv x$. Furthermore, since $\\hat{\\vv x}_1(t)$ and $\\hat{\\vv x}_2(t)$ are linearly independent (i.e., ${c_1\\hat{\\vv x}_1(t) + c_2\\hat{\\vv x}_2(t) = 0 \\ \\text{for all} \\ t \\Leftrightarrow c_1 = c_2 = 0}$), they form a basis for the solution set to $\\dot{\\vv x} = A \\vv x$. Therefore, we can rewrite ([SOL](#sol)) as\n",
+    "We note that since $\\hat{\\vv x}_1(t)$ and $\\hat{\\vv x}_2(t)$ are linear combinations of $\\vv x_1(t)$ and $\\vv x_2(t)$, they are valid solutions to $\\dot{\\vv x} = A\\vv x$. Furthermore, since $\\hat{\\vv x}_1(t)$ and $\\hat{\\vv x}_2(t)$ are linearly independent (i.e., $c_1\\hat{\\vv x}_1(t) + c_2\\hat{\\vv x}_2(t) = 0$ for all $t$ if and only if $c_1 = c_2 = 0$), they form a basis for the solution set to $\\dot{\\vv x} = A \\vv x$. Therefore, we can rewrite ([SOL](#sol)) as\n",
     "\n",
     "$$\n",
     "\\vv x(t) = c_1\\begin{bmatrix} \\cos t \\\\ \\sin t \\end{bmatrix} + c_2\\begin{bmatrix} \\sin t \\\\ -\\cos t \\end{bmatrix}\n",
