--- a/06_Ch_7_Dynamics/083-Matrix_exponential.ipynb
+++ b/06_Ch_7_Dynamics/083-Matrix_exponential.ipynb
@@ -45,9 +45,9 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- the matrix exponential expressed as a power series\n",
-    "- the matrix exponential in the solution to linear dynamical systems\n",
-    "- the different cases while computing the matrix exponential"
+    "- how to define the matrix exponential as a power series,\n",
+    "- how to solve linear ODEs with the matrix exponential,\n",
+    "- how to compute the matrix exponential."
    ]
   },
   {
@@ -83,7 +83,7 @@
     "e^X = I + X + \\frac{X^2}{2!} + \\frac{X^3}{3!} + \\cdots = \\sum_{k=0}^{\\infty} \\frac{X^k}{k!}, \\quad (\\text{MPS})\n",
     "\\end{equation}\n",
     "\n",
-    "Although we can't prove it, it can be shown that ([MPS](#MPS)) converges for any $X$, so this is a well defined object. Does ([MPS](#MPS)) help with solving $\\dot{\\mathbf{\\vv x}} = A\\mathbf{\\vv x}$? Let's try the test solution $\\mathbf{\\vv x}(t) = e^{At}\\mathbf{\\vv x}(0)$ — this is exactly what we did for the scalar setting, but we replace $e^{at}$ with $e^{At}$. Is this a solution to $\\dot{\\mathbf{\\vv x}} = A\\mathbf{\\vv x}$?\n",
+    "Although we can't prove it yet, it can be shown that ([MPS](#MPS)) converges for any $X$, so this is a well defined object. Does ([MPS](#MPS)) help with solving $\\dot{\\mathbf{\\vv x}} = A\\mathbf{\\vv x}$? Let's try the test solution $\\mathbf{\\vv x}(t) = e^{At}\\mathbf{\\vv x}(0)$ — this is exactly what we did for the scalar setting, but we replace $e^{at}$ with $e^{At}$. Is this a solution to $\\dot{\\mathbf{\\vv x}} = A\\mathbf{\\vv x}$?\n",
     "\n",
     "First, we compute $A\\mathbf{\\vv x}(t) = Ae^{At}\\mathbf{\\vv x}(0)$. Next, we need to compute $\\frac{d}{dt}e^{At}\\mathbf{\\vv x}(0)$. But how do we do this? We will rely on ([MPS](#MPS)):\n",
     "\n",
