--- a/07_Ch_8_Iteration/092-Markov_Chains.ipynb
+++ b/07_Ch_8_Iteration/092-Markov_Chains.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: 8.2 Markov Chains\n",
+    "title: 8.2 Markov Processes\n",
     "subject:  Iteration\n",
     "subtitle: \n",
-    "short_title: 8.2 Markov Chains\n",
+    "short_title: 8.2 Markov Processes\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -40,7 +40,7 @@
    "source": [
     "## Reading\n",
     "\n",
-    "Material related to this page, as well as additional exercises, can be found in \n",
+    "Material related to this page, as well as additional exercises, can be found in Section 4.9 and Chapter 10 of LAA $5^{th}$ edition, and ALA 9.3.\n",
     "\n",
     "## Learning Objectives\n",
     "\n",
@@ -52,99 +52,119 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Markov Chains (LAA 5th Edition, §4.9 and Ch.10, ALA §3)\n",
+    "## Weather Prediction: Introduction\n",
     "\n",
-    "We will spend the rest of this lecture on Markov Chains, which are a widely used linear iterative model used to describe a wide variety of situations in biology, business, chemistry, engineering, physics, and elsewhere.\n",
+    "We will spend this section on _Markov Chains_, which are a widely used linear iterative model to describe a wide variety of situations in biology, business, chemistry, engineering, physics, and elsewhere.\n",
     "\n",
     "In each case, the model is used to describe an experiment or measurement that is performed many times in the same way. The outcome of an experiment can be one of several known possible outcomes, and importantly, the outcome of one experiment depends only on the experiment conducted immediately before it. Before introducing a formal model for Markov chains, let's look at an example.\n",
     "\n",
-    "Example: Weather Prediction\n",
-    "\n",
+    ":::{prf:example} Weather Prediction\n",
+    ":label: weather_eg\n",
     "Suppose you would like to predict the weather in your city. Looking at local weather records over the past 10 years, you notice that:\n",
-    "(i) If today is sunny, tomorrow is sunny 70% of the time and cloudy 30% of the time.\n",
-    "(ii) If today is cloudy, tomorrow is cloudy 60% of the time and sunny 40% of the time.\n",
+    "1. If today is sunny, tomorrow is sunny 70% of the time and cloudy 30% of the time.\n",
+    "2. If today is cloudy, tomorrow is cloudy 80% of the time and sunny 20% of the time.\n",
     "\n",
-    "Now, suppose today is sunny. What is the probability¹ that the weather 8 days from now will also be sunny?\n",
+    "Now, suppose today is sunny. What is the _probability_$^{1}$ that the weather 8 days from now will also be sunny?\n",
     "\n",
-    "¹ You will learn how to properly define probabilities in ESE 3010. For our purposes, you can think of it as confidence or likelihood. So saying that 8 days from now will be sunny with probability 60% is the same as saying that the weather 10 days from now is determined by flipping a biased coin that comes up \"sunny\" 60% of the time and \"cloudy\" 40% of the time.\n",
+    "$^{1}$ You will learn how to properly define probabilities in ESE 3010. For our purposes, you can think of it as confidences or likelihood. So saying that 8 days from now will be sunny with probability $60\\%$ is the same as saying that the weather 10 days from now is determined by flipping a biased coin that comes up \"sunny\" $60\\%$ of the time and \"cloudy\" 40% of the time.\n",
     "\n",
-    "To formulate this problem mathematically, let's use S(k) to denote the probability that day k is sunny and C(k) the probability that it is cloudy. If these are the only two possibilities, then the individual probabilities must sum to 1 (i.e., represents 100% likely, as 50% likely, etc.): S(k) + C(k) = 1.\n",
+    "To formulate this problem mathematically, let's use $S(k)$ to denote the probability that day $k$ is sunny and $C(k)$ the probability that it is cloudy. If these are the only two possibilities, then the individual probabilities must sum to 1 (1 represents 100% likely, .5 50% likely, etc.): $S(k) + C(k) = 1$.\n",
     "\n",
-    "According to our historical data, the probability that day k+1 is sunny or cloudy can be expressed as:\n",
+    "According to our historical data, the probability that day $k+1$ is sunny or cloudy can be expressed as:\n",
     "\n",
-    "S(k+1) = .7 S(k) + .4 C(k),    C(k+1) = .3 S(k) + .6 C(k)    (*)\n",
+    "\\begin{equation}\n",
+    "\\label{sun_cloud}\n",
+    "S(k+1) = .7 S(k) + .2 C(k),    \\quad C(k+1) = .3 S(k) + .8 C(k)\n",
+    "\\end{equation}\n",
     "\n",
-    "For example, the equation says that if day k was sunny, i.e., S(k)=1 and C(k)=0 there is a 70% chance day k+1 is too; similarly, if day k was cloudy, i.e., S(k)=0 and C(k)=1, there is a 40% chance day k+1 is sunny."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We rewrite (*) as the linear iterative system x(k+1) = P x(k), where\n",
+    "For example, the [equation](#sun_cloud) says that if day $k$ was sunny, i.e., $S(k)=1$ and $C(k)=0$ there is a 70% chance day $k+1$ is too; similarly, if day $k$ was cloudy, i.e., $S(k)=0$ and $C(k)=1$, there is a 40% chance day $k+1$ is sunny.\n",
     "\n",
-    "P = [.7  .4]    and x(k) = [S(k)]\n",
-    "    [.3  .6]              [C(k)]\n",
+    "We rewrite [](#sun_cloud) as the linear iterative system $\\vv x(k+1) = P \\vv x(k)$, where\n",
     "\n",
-    "We use P instead of T here as this is a typical convention for describing the transition matrix of a Markov chain. The vector x(k) is called the kth state vector.\n",
+    "$$\n",
+    "P = \\bm .7 & .2 \\\\ .3  & .8 \\em  \\ \\text{and}\\ \\ \\vv x(k) = \\bm S(k) \\\\ C(k) \\em            \n",
+    "$$\n",
     "\n",
-    "Now, given that today is sunny, i.e., that S(0) = 1 and C(0) = 1, what is the probability that 8 days from now is sunny? We can answer this easily by iterating the system x(k+1) = P x(k) to compute x(8)!\n",
+    "We use $P$ instead of $T$ here as this is a typical convention for describing the _transition matrix_ of a Markov chain. The vector $\\vv x(k)$ is called the $k^{th}$ _state vector_.\n",
     "\n",
-    "x(0) = [1], x(1) = Px(0) ≈ [.7], x(2) = Px(1) ≈ P²x(0) ≈ [.55]\n",
-    "       [0]                [.3]                         [.45]\n",
+    "Now, given that today is sunny, i.e., that $S(0) = 1$ and $C(0) = 0$, what is the probability that 8 days from now is sunny? We can answer this easily by iterating the system $\\vv x(k+1) = P \\vv x(k)$ to compute $\\vv x(8)$!\n",
     "\n",
-    "x(3) = P³x(0) ≈ [.475], x(4) ≈ [.438], x(5) ≈ [.419], x(6) ≈ [.410]\n",
-    "                [.525]         [.562]         [.581]         [.590]\n",
+    "\\begin{align*}\n",
+    "\\vv x(0) &= \\bm 1 \\\\ 0 \\em \\vv x(1) = P \\vv x(0) = \\bm .7 \\\\ .3 \\em, \\ \\vv x(2) = P \\vv x(1) = P^2 \\vv x(0) \\approx \\bm .55 \\\\ .45 \\em \\\\\n",
     "\n",
-    "x(7) ≈ [.405], x(8) ≈ [.402]\n",
-    "       [.595]         [.598]\n",
+    "\\vv x(3) &= P^3 \\vv x(0) \\approx  \\bm .475 \\\\ .525 \\em, \\ \\vv x(4) \\approx \\bm .438 \\\\ .562 \\em, \\ \\vv x(5) \\approx \\bm .419 \\\\ .581 \\em, \\ \\vv x(6) \\approx \\bm .410 \\\\ .590 \\em \\\\\n",
+    "\n",
+    "\\vv x(7) &\\approx  \\bm .405 \\\\ .595 \\em, \\ \\vv x(8) \\approx \\bm .402 \\\\ .598 \\em\n",
+    "\\end{align*}\n",
     "\n",
     "So we conclude that 40.2% of the time, if today is sunny, then 8 days from now is also sunny.\n",
+    ":::\n",
     "\n",
-    "We make a few observations about the state vectors x(k) to motivate some of the new tools we'll introduce:\n",
+    ":::{note} Observations from [](#weather_eg)\n",
+    "We make a few observations about the state vectors $\\vv x(k)$ to motivate some of the new tools we'll introduce:\n",
     "\n",
-    "1) Every state vector x(k) is a probability vector, i.e., x₁(k) and x₂(k) ≥ 0 and x₁(k) + x₂(k) = 1\n",
-    "2) The process converges fairly quickly to x* = [.4], which is a fixed\n",
-    "                                                [.6]\n",
-    "   point of x(k+1) = Px(k), i.e., x* = Px*\n",
-    "3) This convergence to x* actually happens for any initial probability vector x(0). This means that in the long run, 40% of days are sunny and 60% are rainy.\n",
+    "1) Every state vector $\\vv x(k)$ is a _probability vector_, i.e., $ x_1(k)$ and $x_2(k) \\geq 0$ and $x_1(k) + x_2(k) = 1$\n",
+    "2) The process converges fairly quickly to $\\vv x^* = \\bm .4 \\\\ .6 \\em $, which is a _fixed point_ of $\\vv x(k+1) = P\\vv x(k)$, i.e., $\\vv x^* = P\\vv x^*$\n",
+    "3) The convergence to $\\vv x^*$ actually happens for any initial probability vector $\\vv x(0)$. This means that in the long run, 40% of days are sunny and 60% are rainy.\n",
     "\n",
-    "Let's try to understand why this happens, and then we'll look at some interesting applications of Markov chains.\n",
-    "\n",
-    "Our starting point is a general definition of a probability vector: a vector x ∈ ℝⁿ is called a probability vector if xᵢ ≥ 0 for i=1,...,n and x₁ + ... + xₙ = 1. We interpret xᵢ as the probability (or likelihood) that the system is in state i."
+    ":::"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In general, a Markov chain is given by the first order linear iterative system\n",
+    "## Convergence in Markov Chains\n",
     "\n",
-    "x(k+1) = P x(k)  (MC)\n",
+    "Let's try to understand why the convergence in [](#weather_eg) happens, and then we'll look at some interesting applications of Markov chains.\n",
     "\n",
-    "whose initial state x(0) is a probability vector. The entries of the transition matrix P must satisfy\n",
+    "Our starting point is a general definition of a _probability vector_.\n",
+    ":::{prf:definition} Probability Vector\n",
+    ":label: prob_vec_defn\n",
+    "A vector $\\vv x \\in \\mathbb{R}^n$ is called a _probability vector_ if $x_i \\geq 0$ for $i=1,\\ldots,n$ and $x_1 + \\ldots + x_n = 1$. We interpret $x_i$ as the probability (or likelihood) that the system is in state $i$.\n",
+    ":::\n",
     "\n",
-    "0 ≤ pᵢⱼ ≤ 1  and  pᵢ₁ + ... + pᵢₙ = 1.  (TM)\n",
+    "In general, a _Markov chain_ is given by the first order linear iterative system\n",
+    "\\begin{equation}\n",
+    "\\label{MC_eqn}\n",
+    "\\vv x(k+1) = P \\vv x(k)  \\quad (\\text{MC})\n",
+    "\\end{equation}\n",
     "\n",
-    "for all i,j=1,...,n. The entry pᵢⱼ is the transition probability that the system will switch from state j to state i. Because this covers all possible transitions, this means each column sums to 1. Under these conditions, we can guarantee that if x(k) is a probability vector, so is x(k+1) = Px(k). To see this, note that 1ᵀP = 1ᵀ[p₁₁ ... 1p₁ₙ] = [1 ... 1] = 1ᵀ so that 1ᵀx(k+1) = 1ᵀPx(k) = 1ᵀx(k) = 1. That x(k+1) is entrywise non-negative follows from P and x(k) being entry-wise non-negative.\n",
+    "whose initial state $\\vv x(0)$ is a probability vector. The entries of the _transition matrix_ $P$ must satisfy\n",
+    "\\begin{equation}\n",
+    "\\label{TM_eqn}\n",
+    "0 \\leq p_{ij} \\leq 1 \\  \\text{and} \\  p_{1j} + \\cdots + p_{nj} = 1.  \\quad (\\text{TM})\n",
+    "\\end{equation}\n",
     "\n",
-    "Next, let's investigate convergence properties. We first need to impose a very mild technical condition on the transition matrix P, namely we assume that it is regular: A transition matrix P (TM) is regular if for some power k, Pᵏ contains no zero entries. This means that it is possible to get from one state to any other state in k steps.\n",
+    "for all $i,j=1,\\ldots,n$. The entry $p_{ij}$ is the _transition probability_ that the system will switch from state $j$ to state $i$. Because this covers all possible transitions, this means each column sums to 1. Under these conditions, we can guarantee that if $\\vv x(k)$ is a probability vector, so is $\\vv x(k+1) = P\\vv x(k)$. To see this, note that $\\vv 1^{\\top} P = \\bm \\vv 1^{\\top} \\vv  p_1 & \\cdots & 1^{\\top} \\vv p_n\\em = \\bm 1 & \\cdots & 1 \\em = \\vv 1^{\\top}$ so that $\\vv 1^{\\top} \\vv x(k+1) = \\vv 1^{\\top} P\\vv x(k) = \\vv 1^{\\top} \\vv x(k) = 1$. That $\\vv x(k+1)$ is entrywise non-negative follows from $P$ and $\\vv x(k)$ being entry-wise non-negative.\n",
     "\n",
-    "The long-term behavior of a Markov chain with regular transition matrix P is governed by the Perron-Frobenius theorem, which we state next. The proof is quite involved, so we omit it, but if you're curious, check out the end of ALA §3.\n",
+    "Next, let's investigate convergence properties. We first need to impose a very mild technical condition on the transition matrix $P$, namely we assume that it is _regular_.\n",
     "\n",
-    "Theorem: If P is a regular transition matrix, then it admits a unique probability vector x* with eigenvalue λ₁=1. Moreover, a Markov chain with regular matrix P will converge to x*: x(k) → x* as k→∞\n",
+    ":::{prf:definition} Regular Transition Matrix\n",
+    ":label:regular_defn\n",
+    "A transition matrix $P$ ([TM](#TM_eqn)) is _regular_ if for some power $k$, $P^k$ contains no zero entries. This means that it is possible to get from one state to any other state in $k$ steps.\n",
+    ":::\n",
     "\n",
-    "This is a very exciting development! It tells us that we can understand the long-term behavior of a regular Markov chain by solving for the eigenvector x* associated with the eigenvalue λ₁=1 of P.\n",
+    "The long-term behavior of a Markov chain with regular transition matrix $P$ is governed by the _Perron-Frobenius_ theorem, which we state next. The proof is quite involved, so we won't cover it, but if you're curious, check out the end of ALA 9.3.\n",
     "\n",
-    "Returning to our weather prediction example, we compute the steady state probability vector x* by just solving (P-I)v=0:\n",
+    ":::{prf:theorem}\n",
+    ":label: regular_thm\n",
+    "If $P$ is a [regular transition matrix](#regular_defn), then it admits a unique probability vector $\\vv x^*$ with eigenvalue $\\lambda_1=1$. Moreover, a Markov chain with coefficient matrix $P$ will converge to $\\vv x^*: \\vv x(k) \\to \\vv x^*$ as $k \\to \\infty$.\n",
+    ":::\n",
     "\n",
-    "(P-I)v = [-.3 .4][v₁] = 0 => v₁ = 2 v₂ => v = [⁴⁄₃]\n",
-    "         [.3 -.4][v₂]                           [²⁄₃]\n",
+    "This is a very exciting development! It tells us that we can understand the long-term behavior of a regular Markov chain by solving for the eigenvector $\\vv x^*$ associated with the eigenvalue $\\lambda_1=1$ of $P$.\n",
     "\n",
-    "and then normalizing v so that its entries add up to 1:\n",
+    "Returning to our weather prediction example, we compute the steady state probability vector $\\vv x^*$ by just solving $(P-I)\\vv v=\\vv 0$:\n",
+    "$$\n",
+    "(P-I)\\vv v = \\bm -.3 & .2 \\\\ .3 & -.2 \\em \\bm v_1 & v_2 \\em = \\vv 0 => v_1 = \\frac{2}{3} v_2 \\Rightarrow \\vv v = \\bm \\frac{2}{3} \\\\ 1 \\em\n",
+    "$$\n",
     "\n",
-    "x* = 1/(1+²⁄₃) [⁴⁄₃] = [⁴⁄₅] = [0.4]\n",
-    "               [²⁄₃]   [²⁄₅]   [0.6]"
+    "and then normalizing $\\vv v$ so that its entries add up to 1:\n",
+    "$$\n",
+    "\\vv x^* = \\frac{1}{1+\\frac{2}{3}} \\bm \\frac{2}{3} \\\\ 1 \\em = \\bm \\frac{2}{5} \\\\ \\frac{3}{5} \\em = \\bm 0.4 \\\\ 0.6 \\em\n",
+    "$$\n",
+    "\n",
+    "This special eigenvector $\\vv x^*$ tells us that _no matter the initial state_ $\\vv x(0)$, the long term behavior is that we are in State 1 (sunny) 40% of days and State 2 (cloudy) 60% of days."
    ]
   },
   {
@@ -152,7 +172,6 @@
    "metadata": {},
    "source": [
     "\n",
-    "This special eigenvector x* tells us that no matter the initial state x(0), the long term behavior is that we are in State 1 (sunny) 40% of days and State 2 (cloudy) 60% of days.\n",
     "\n",
     "Example: Get out the vote!\n",
     "\n",
