matrix exp theorem proof

--- a/06_Ch_7_Dynamics/083-Matrix_exponential.ipynb
+++ b/06_Ch_7_Dynamics/083-Matrix_exponential.ipynb
@@ -227,12 +227,32 @@
     "\n",
     "::::{prf:theorem}\n",
     ":label: e_AB_commute_thm\n",
-    "$e^{A+B} = e^A e^B$ if and only if $AB = BA$, that is, if and only if A and B commute.\n",
+    "If $A$ and $B$ commute ($AB = BA$), then $e^{A}e^B = e^{A+B}$.\n",
     "\n",
-    ":::{prf:proof} Proof of [](#e_AB_commute_thm) TO COMPLETE\n",
+    ":::{prf:proof} Proof of [](#e_AB_commute_thm)\n",
     ":label: proof-e_AB_commute_thm\n",
     ":class: dropdown\n",
-    "Assume $ A $ and $ B $ commute, i.e., $ AB = BA $. We will first show that $ e^{A+B} = e^A e^B $.\n",
+    "\n",
+    "Assume $A, B$ commute, i.e., $AB = BA$. Expanding $e^{A}e^B$ using the power series definition, we have:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "e^Ae^B &= \\left(\\sum_{a = 0}^{\\infty}{\\frac{A^a}{a!}}\\right)\\left(\\sum_{b =0}^{\\infty}{\\frac{B^b}{b!}}\\right)\\\\\n",
+    "&= \\sum_{a = 0}^{\\infty}{\\frac{A^a}{a!}\\left(\\sum_{b =0}^{\\infty}{\\frac{B^b}{b!}}\\right)}\\\\\n",
+    "&= \\sum_{p = 0}^{\\infty}{\\sum_{a=0}^{p}{ \\frac{A^a}{a!}\\cdot \\frac{B^{p - a}}{(p-a)!} }}\n",
+    "\\end{align*}\n",
+    "\n",
+    "The last equality in particular follows by grouping terms with the same values of $a + b$. We also expand $e^{A + B}$ using the power series definition,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "e^{A + B} &= \\sum_{p = 0}^{\\infty}{\\frac{(A + B)^p}{p!}}\\\\\n",
+    "    &= \\sum_{p = 0}^{\\infty}{\\sum_{a = 0}^{p}{\\frac{\\binom{p}{a}A^aB^{k - a}}{p!}}}\\\\\n",
+    "    &= \\sum_{p = 0}^{\\infty}{\\sum_{a = 0}^{p}{\\frac{\\left(\\frac{p!}{a!(p - a)!}\\right)A^aB^{p - a}}{p!}}}\\\\\n",
+    "    &= \\sum_{p = 0}^{\\infty}{\\sum_{a=0}^{p}{ \\frac{A^a}{a!}\\cdot \\frac{B^{p - a}}{(p-a)!} }}\n",
+    "\\end{align*}\n",
+    "\n",
+    "Here, the second equality follows from the binomial expansion and commutativity of $A, B$. We see that the expressions for $e^Ae^B$ and $e^{A + B}$ are equal. Hence $AB = BA$ implies $e^{A}e^B = e^{A+B}$.\n",
+    "\n",
+    "<!-- Assume $ A $ and $ B $ commute, i.e., $ AB = BA $. We will first show that $ e^{A+B} = e^A e^B $.\n",
     "\n",
     "First, recall the series expansion for the matrix exponential: $e^X = \\sum_{n=0}^{\\infty} \\frac{X^n}{n!}$. Then,\n",
     "$$\n",
@@ -249,7 +269,7 @@
     "\n",
     "Hence, $ e^{A+B} = e^A e^B $ if $ AB = BA $.\n",
     "\n",
-    "<!-- Now assume $ e^{A+B} = e^A e^B $. We need to show that $ A $ and $ B $ commute.\n",
+    "Now assume $ e^{A+B} = e^A e^B $. We need to show that $ A $ and $ B $ commute.\n",
     "\n",
     "Consider the matrix $ C(t) = e^{At} e^{Bt} $. Differentiating $ C(t) $ with respect to $ t $ gives:\n",
     "$$\n",
@@ -274,8 +294,8 @@
     "Comparing the two derivatives:\n",
     "\\[\n",
     "A e^{At} e^{Bt} + e^{At} B e^{Bt} = (A+B) e^{(A+B)t}\n",
-    "\\]\n",
-    "\n",
+    "\\] -->\n",
+    "<!-- \n",
     "This implies:\n",
     "\\[\n",
     "A e^{(A+B)t} + B e^{(A+B)t} = (A+B) e^{(A+B)t}\n",
@@ -300,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Case 4: Jordan Block\n",
+    "### Case 4: Jordan Block\n",
     "\n",
     "Assume $A = V \\begin{bmatrix} \\lambda & 1 \\\\ 0 & \\lambda \\end{bmatrix} V^{-1}$, for $V = \\bm \\vv v_1 & \\vv v_2\\em$ an eigenvector and generalized eigenvector of A.\n",
     "\n",
