added linear odes section numbers to eigenvalues page

--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/071-eigenvalues_eigenvectors.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/071-eigenvalues_eigenvectors.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "# Eigenvalues and Eigenvectors\n",
     "\n",
-    "In this chapter, we will discuss one of the most fundamental elements of linear algebra: the *eigenvalues and eigenvectors* of a square matrix $A$. Eigenvalues and eigenvectors are ubiquitous throughout linear algebra and calculus, and in later sections we'll discuss their applications to the analysis of linear dynamical systems (TODO add section).\n",
+    "In this chapter, we will discuss one of the most fundamental elements of linear algebra: the *eigenvalues and eigenvectors* of a square matrix $A$. Eigenvalues and eigenvectors are ubiquitous throughout linear algebra and calculus, and in later sections we'll discuss their applications to the analysis of linear dynamical systems (sections 6.8 and 7.1-7.5).\n",
     "\n",
     ":::{prf:definition} Eigenvalues and Eigenvectors\n",
     ":label: eigen-defn\n",
