added clarification on complete/diagonalizable matrices

--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/077-diagonalization.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/077-diagonalization.ipynb
@@ -63,6 +63,8 @@
     ":label: eigenbasis-defn\n",
     "\n",
     "Let $\\vv{v_1}, ..., \\vv{v_k}$ be the eigenvectors of a matrix $A \\in \\mathbb{R}^n$. If $ \\text{span} \\{ \\vv{v_1}, ..., \\vv{v_k} \\} = \\mathbb{R}^n$, i.e., the eigenvectors of $A$ span the entire space $\\mathbb{R}^n$, then its eigenvectors form an *eigenbasis* for $\\mathbb{R}^n$.\n",
+    "\n",
+    "If the eigenvectors of $A$ form a basis for $\\mathbb{R}^n$, then $A$ is *complete*.\n",
     ":::\n",
     "\n",
     "Such *eigenbases* allow us to rewrite the linear transformation determined by a matrix in a simple diagonal form; matrices what allow us to do this are called *diagonalizable*, a definition which we will formalize shortly. We focus on matrices with real eigenvalues and eigenvectors to start, and will return to matrices with complex eigenvalues/eigenvectors in a few pages.\n",
@@ -240,7 +242,7 @@
     ":::{prf:theorem} A necessary and sufficient condition for diagonalizability\n",
     ":label: diagonalizable-thm\n",
     "\n",
-    "A matrix $A \\in \\mathbb{R}^{n\\times n}$ is diagonalizable if and only if it has $n$ linearly independent eigenvectors.\n",
+    "A matrix $A \\in \\mathbb{R}^{n\\times n}$ is diagonalizable if and only if it has $n$ linearly independent eigenvectors. In other words, $A$ is diagonalizable if and only if $A$ is [complete](#eigenbasis-defn).\n",
     "\n",
     "Equivalently, $A$ is digonalizable if and only if, for each eigenvalue $\\lambda$, its [geometric multiplicity matches its algebraic multiplicity](#multiplicity-defn).\n",
     "\n",
